--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts/detectmobilebrowser.js"></script>
     <script src="scripts/particles.js"></script>
     <script src="scripts/main.js"></script>
   </body>
