colors extracted to file

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/roboto_mono_fonts.css" />
+    <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
