--- a/index.html
+++ b/index.html
@@ -11,15 +11,26 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="styles/roboto_mono_fonts.css" />
+    <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <canvas id="main"></canvas>
+    <canvas
+      id="particles"
+      data-n="250"
+      data-r="2"
+      data-max-speed="0.5"
+      data-link-dist="100"
+      data-invert-color="false"
+    ></canvas>
+
     <div class="container">
       <div class="f400 name">Vladimir Gorbach</div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+    <script src="scripts/detectmobilebrowser.js"></script>
+    <script src="scripts/particles.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
