--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vladimir Gorbach</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,6 +28,11 @@
     <div class="container">
       <div class="f400 name">Vladimir Gorbach</div>
     </div>
+
+    <label class="theme-toggle">
+      <input id="theme-toggle" type="checkbox" />
+      <div class="circle"></div>
+    </label>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/detectmobilebrowser.js"></script>
