--- a/index.html
+++ b/index.html
@@ -11,22 +11,13 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/roboto_mono_fonts.css" />
-    <link rel="stylesheet" href="styles/colors.css" />
     <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <canvas
-      id="particles"
-      data-n="250"
-      data-r="2"
-      data-max-speed="0.5"
-      data-link-dist="100"
-      data-invert-color="false"
-    ></canvas>
+    <canvas id="particles" data-n="220" data-max-speed="0.3"></canvas>
 
     <div class="container">
-      <div class="f400 name">Vladimir Gorbach</div>
+      <div id="name" class="f200 glitch-text">Vladimir Gorbach</div>
     </div>
 
     <label class="theme-toggle">
@@ -37,6 +28,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="scripts/detectmobilebrowser.js"></script>
     <script src="scripts/particles.js"></script>
+    <script src="scripts/typewriter.js"></script>
     <script src="scripts/main.js"></script>
   </body>
 </html>
