test multiple pages 2

--- a/public/cvv.html
+++ b/public/cvv.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CV</title>
+    <title>CV2</title>
   </head>
   <body>
-    <h1>CV 1 try</h1>
+    <h1>CV 2 try</h1>
   </body>
 </html>
